// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TileSelector /> Matches the current snapshot 1`] = `
<styled.div
  id="tile-selector"
>
  <styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="NONE"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="NONE"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="FLOOR"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="FLOOR"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="GLASS"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="GLASS"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="BLOCK"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="BLOCK"
      />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<TileSelector /> Matches the current snapshot if a tile is selected 1`] = `
<styled.div
  id="tile-selector"
>
  <styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="NONE"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="NONE"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="FLOOR"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="FLOOR"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="GLASS"
      onClick={[Function]}
    >
      <Tile
        isSelected={false}
        tileId="GLASS"
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={true}
      key="BLOCK"
      onClick={[Function]}
    >
      <Tile
        isSelected={true}
        tileId="BLOCK"
      />
    </styled.div>
  </styled.div>
</styled.div>
`;
